try to modularize